unpackaged/main/default/objects/npsp__DeploymentEvent__e/npsp__DeploymentEvent__e.object-meta.xml
<CustomObject>
    <label>Deployment Event</label>
    <pluralLabel>DeploymentEvent</pluralLabel>
</CustomObject>