unpackaged/main/default/objects/npsp__DeploymentEvent__e/fields/npsp__CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>npsp__CompletedDate__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>