unpackaged/main/default/objects/npsp__DeploymentEvent__e/fields/npsp__Status__c.field-meta.xml
<CustomField>
    <fullName>npsp__Status__c</fullName>
    <label>Status</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>